# p-lang

./: .gitignore  LICENSE  README.md  pyproject.toml  СПЕЦИФИКАЦІЯ.md  писарня.html  словарь.js
vscode-extension/: .vsixignore  CHANGELOG.md  README.md  language-configuration.json  package.json
vscode-extension/syntaxes/: п.tmLanguage.json
п/: __init__.py  __main__.py  лексеръ.py  парсеръ.py  транспайлеръ.py  узлы.py
п/тесты/: тестъ_лексера.py
примѣры/: 01_привѣтствіе.п  02_факторіалъ.п  03_сортировка.п  04_человѣкъ.п  05_фибоначчи.п
тесты/: тестъ_парсера.py
