[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "p-lang"
version = "1.1.0"
description = "Языкъ программированія «П» — русскоязычный язык программирования в стиле XIX века"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "П Автор"}
]
keywords = ["programming-language", "russian", "transpiler", "educational"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Russian",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Interpreters",
]

[project.scripts]
p-lang = "п.__main__:main"

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/p-lang"
Documentation = "https://github.com/YOUR_USERNAME/p-lang#readme"

[tool.setuptools.packages.find]
include = ["п*"]

[tool.setuptools.package-data]
"п" = ["*.py"]
